--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendors/css/normalize.css"><!-- separet mostly usable css -->
-    <link rel="stylesheet" href="vendors/css/gird.css"><!-- separet gird css -->
-    <link rel="stylesheet" href="css/style.css"><!-- main css file -->
-    <link rel="stylesheet" href="css/responsive.css"><!-- separet responsiv css -->
+    <link rel="stylesheet" href="vendors/css/gird.min.css"><!-- separet gird css -->
+    <link rel="stylesheet" href="css/style.min.css"><!-- main css file -->
+    <link rel="stylesheet" href="css/responsive.min.css"><!-- separet responsiv css -->
 </head>
 <body>
 <!-- ========================
@@ -365,7 +365,7 @@
     <script src="vendors/js/respond.min.js"></script><!-- for min/max-width CSS3 Media Queries (for IE 6-8, and more) -->
     <script src="vendors/js/selectivizr.min.js"></script><!-- selectivizar enternet expolore 6-8 version psudu class working file -->
     <script src="vendors/js/waypoints.min.js"></script><!-- stikey menu -->
-    <script src="js/script.js"></script><!-- main js file -->
+    <script src="js/script.min.js"></script><!-- main js file -->
     <!-- ALL SCRIPT FILE END -->
 </body>
 </html>
