--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendors/css/normalize.css"><!-- separet mostly usable css -->
-    <link rel="stylesheet" href="vendors/css/gird.min.css"><!-- separet gird css -->
+    <link rel="stylesheet" href="vendors/css/gird.css"><!-- separet gird css -->
     <link rel="stylesheet" href="css/style.min.css"><!-- main css file -->
     <link rel="stylesheet" href="css/responsive.min.css"><!-- separet responsiv css -->
 </head>
